--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build VkGHL Vulkan Layer
+name: Build VkGHL (VulkanTools Method)
 
 on:
   workflow_dispatch:
@@ -7,44 +7,63 @@ jobs:
   build-vkghl:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
-        with:
-          repository: pchome/VkGHL
-
       - name: Install Dependencies
         run: |
           sudo apt-get update
-          # Removido 'vulkan-headers' pois libvulkan-dev já faz o trabalho
           sudo apt-get install -y \
-            cmake build-essential \
+            build-essential cmake python3 git \
             gcc-aarch64-linux-gnu g++-aarch64-linux-gnu \
             libvulkan-dev
 
+      - name: Prepare VulkanTools & VkGHL
+        run: |
+          # 1. Clona a "casa" (VulkanTools)
+          git clone https://github.com/LunarG/VulkanTools
+          cd VulkanTools
+          
+          # 2. Limpa os exemplos que não precisamos (como manda a print)
+          rm -rf layer_factory/assistant_layer
+          rm -rf layer_factory/demo_layer
+          rm -rf layer_factory/starter_layer
+          
+          # 3. Baixa o VkGHL para dentro da pasta layer_factory
+          git clone https://github.com/pchome/VkGHL layer_factory/VkGHL
+
       - name: Build for ARM64
         run: |
-          mkdir -p build
-          cd build
+          cd VulkanTools
+          mkdir build_arm64
+          cd build_arm64
           
-          # Configura o CMake para compilar para ARM64
+          # Configuração do CMake com as flags da sua print + Cross-Compile
           cmake .. \
             -DCMAKE_SYSTEM_NAME=Linux \
             -DCMAKE_SYSTEM_PROCESSOR=aarch64 \
             -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc \
             -DCMAKE_CXX_COMPILER=aarch64-linux-gnu-g++ \
-            -DCMAKE_BUILD_TYPE=Release
+            -DCMAKE_BUILD_TYPE=Release \
+            -DBUILD_TESTS=OFF \
+            -DBUILD_LAYERSVT=OFF \
+            -DBUILD_VKTRACE=OFF \
+            -DBUILD_VIA=OFF \
+            -DBUILD_LAYERMGR=OFF \
+            -DBUILD_VKTRACE_REPLAY=OFF \
+            -DVkLayer_VkGHL_INSTALL_DIR=/usr/lib
           
+          # Compila
           make
 
-      - name: Prepare Artifacts
+      - name: Locate and Prepare Artifacts
         run: |
-          mkdir -p output/
-          # No VkGHL, o nome da lib gerada pode variar, usamos curinga *.so para garantir
-          cp build/*.so output/libVkLayer_VkGHL.so
+          mkdir -p output
           
-          # O arquivo JSON original precisa ser copiado também
-          cp VkLayer_VkGHL.json output/
+          # Procura onde o VkGHL foi gerado (geralmente fica em layers/)
+          find VulkanTools/build_arm64 -name "libVkLayer_VkGHL.so" -exec cp {} output/ \;
+          
+          # Copia o JSON original do repositório do VkGHL
+          cp VulkanTools/layer_factory/VkGHL/VkLayer_VkGHL.json output/
 
       - uses: actions/upload-artifact@v4
         with:
-          name: vkghl-arm64
+          name: vkghl-arm64-final
           path: output/
